# deep-learning-notes

./: CITATION.cff  README-zh.md  README.md  _environment  _quarto-html.yml  _quarto-typst-en.yml  _quarto-typst-zh.yml  _quarto.yml  architecture-zh.md  architecture.md  colab-setup.sh  generate_toc.py  index.qmd  pyproject.toml  refs-article.bib  refs-media.bib  requirements.txt  styles.css
.github/: renovate.json
.github/workflows/: dnnl-ci.yml  manual-publish.yml  package-notebooks.yml  publish.yml  quarto-publish.yml  release-testpypi.yml  render-check.yml  render-pdf.yml
_freeze/en/: .gitignore
_freeze/zh/: .gitignore
dnnl/: pyproject.toml
dnnl/dnnl/models/vit/: __init__.py  embedding.py  utils.py
dnnl/dnnl/nn/: __init__.py  attention.py  diffusion.py  positional_encoding.py  transformer.py  unet.py  vae.py
dnnl/dnnl/nn/functional/: attention.py  diffusion.py  flash_attention.py  loss.py
dnnl/src/dnnl/: configtools.py  pylabtools.py  trainingtools.py
dnnl/src/dnnl/models/mlp/: __init__.py  layer.py
dnnl/src/dnnl/models/seq2seq/: transformer.py
dnnl/src/dnnl/models/vae/: vae.py
dnnl/src/dnnl/models/vit/: embedding.py  vit.py
dnnl/src/dnnl/nn/: attention.py  linear.py
dnnl/src/dnnl/nn/functional/: attention.py
dnnl/src/dnnl/optim/: __init__.py  adadelta.py  adagrad.py  base.py  sgd.py
dnnl/tests/: test_nn_diffusion.py  test_nn_flash_attention.py  test_nn_transformer.py  test_nn_vae.py
dnnl/tests/models/: test_mlp.py  test_vit.py
dnnl/tests/nn/: test_attention.py  test_linear.py  test_transformer.py
dnnl/tests/optim/: test_adadelta.py  test_defaults.py  test_muon.py  test_rmsprop.py  test_sgd.py  test_utils.py
dnnlpy/: LICENSE.txt  README.md  pyproject.toml  ruff.toml
dnnlpy/src/dnnlpy/: __init__.py  pylabtools.py
dnnlpy/src/dnnlpy/models/: __init__.py
dnnlpy/src/dnnlpy/models/ddpm/: __init__.py  ddpm.py  embedding.py  unet.py  utils.py
dnnlpy/src/dnnlpy/models/gpt/: __init__.py  gpt.py  utils.py
dnnlpy/src/dnnlpy/models/mlp/: __init__.py  activation.py  base.py  loss.py  mlp.py  optimizer.py
dnnlpy/src/dnnlpy/models/seq2seq/: __init__.py  transformer.py
dnnlpy/src/dnnlpy/models/vae/: __init__.py  autoencoder.py  vae.py
dnnlpy/src/dnnlpy/models/vit/: __init__.py  embedding.py  utils.py  vit.py
dnnlpy/src/dnnlpy/nn/: __init__.py  activation.py  affine.py  attention.py  linear.py  loss.py  normalization.py  transformer.py
dnnlpy/src/dnnlpy/nn/functional/: __init__.py  activation.py  affine.py  attention.py  linear.py  loss.py  regularization.py
dnnlpy/src/dnnlpy/optim/: __init__.py  adadelta.py  adagrad.py  adam.py  adamw.py  muon.py  rmsprop.py  sgd.py  utils.py
dnnlpy/src/dnnlpy/tokenizers/: __init__.py  base.py  bpe.py  traditional.py
dnnlpy/tests/: conftest.py  test_trainingtools.py
dnnlpy/tests/models/: test_diffusion.py  test_mlp.py  test_seq2seq.py  test_vae.py  test_vit.py
dnnlpy/tests/nn/: test_activation.py  test_affine.py  test_attention.py  test_exports.py  test_flash_attention.py  test_linear.py  test_loss.py  test_normalization.py  test_transformer.py
dnnlpy/tests/optim/: test_adadelta.py  test_adagrad.py  test_adam.py  test_adamw.py  test_adaptive_weight_decay.py  test_defaults.py  test_muon.py  test_rmsprop.py  test_sgd.py  test_utils.py
dnnlpy/tests/tokenizers/: test_bpe.py  test_traditional.py
en/: README.md  index.qmd  part1.qmd
en/ch1-introduction/: ch1.1-neural-network.qmd  ch1.3-computation-graph.qmd
en/ch10-efficient-attention/: ch10.1-attention-is-io-bound.qmd  ch10.2-flash-attention-v1.qmd
en/ch10-flash-attention/: ch10.2-flash-attention-v1.qmd
en/ch11-vision-transformers/: ch11.1-from-cnn-to-vit.qmd  ch11.2-patch-embedding.qmd  ch11.3-positional-embedding.qmd  ch11.4-vit-encoder.qmd  ch11.5-vit-as-backbone.qmd
en/ch12-generative-adversarial-networks/: ch12.1-gan-basics.qmd
en/ch13-autoencoders-and-vaes/: ch13.1-autoencoder.qmd  ch13.2-variational-autoencoder.qmd  ch13.3-elbo-vae-objective.qmd  ch13.4-vae-training-phenomena.qmd  ch13.5-vae-limitations-and-future-directions.qmd
en/ch14-diffusion-models/: ch14.1-ddpm-basics.qmd  ch14.2-ddpm-forward.qmd  ch14.3-ddpm-reverse.qmd  ch14.4-ddpm-design-and-sampling.qmd  ch14.5-elbo-for-ddpm.qmd
en/ch15-multimodal-learning/: ch15.1-clip.qmd
en/ch15-vision-language-models/: ch15.1-clip.qmd
en/ch2-pytorch-introduction/: ch2.1-automatic-differentiation.qmd  ch2.2-autograd-contexts.qmd  ch2.5-optimizer.qmd  ch2.7-checkpoint-resuming.qmd
en/ch3-multi-layer-perceptron/: ch3.1-from-linear-model-to-mlp.qmd  ch3.2-activation-functions.qmd  ch3.3-softmax-cross-entropy.qmd  ch3.4-linear-layer.qmd  ch3.5-mlp-from-scratch.qmd  ch3.6-train-mlp-on-mnist.qmd  ch3.7-gradient-checking.qmd  ch3.8-mlp-with-pytorch.qmd
utils/: clean_checkpoint.py  clean_checkpoints.py  clean_jupyter_cache.py  clean_mermaid_svg.py  download_datasets.py  generate_toc.py  generate_typst_en.py  generate_typst_zh.py  rename_pdf.py  render_mermaid.py  render_mermaid_skip_if_exists.py  typst-header-zh.typ
zh/: README.md  index.qmd  part1.qmd  part6.qmd
(+175 files in other folders)
