[project]
name = "deep-learning-notes"
version = "2026.05.16"
keywords = ["deep learning tutorials", "PyTorch", "Quarto"]
description = "A collection of notes and code examples for deep learning concepts and techniques."
authors = [{ name = "jshn9515", email = "jshn9510@gmail.com" }]
readme = "README.md"
license = "CC BY-NC 4.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    # Deep learning core libraries
    "torch~=2.12.0",
    "torchvision~=0.27.0",
    "torchmetrics~=1.9.0",
    "transformers~=5.9.0",
    "diffusers~=0.37.0",  # pin due to safetensors 0.8.0rc0
    "datasets~=4.8.0",

    # Jupyter and related tools
    "ipython>=9.10.0",
    "jupyterlab>=4.3.0",
    "jupyter-cache>=1.0.0",

    # Data processing and visualization
    "numpy~=2.4.0",
    "pillow~=12.2.0",
    "matplotlib~=3.10.0",
    "scipy~=1.17.0",
    "seaborn~=0.13.0",
    "scikit-learn~=1.8.0",
    "opencv-contrib-python~=4.13.0",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[project.urls]
Homepage = "https://github.com/jshn9515/deep-learning-notes"

[tool.uv.workspace]
members = ["dnnl"]
