[project]
name = "dnnlpy"
version = "2026.06.11"
keywords = ["deep learning notes", "library", "utilities"]
description = "A utility library for deep learning notes, providing common functions and tools to support the main content of the deep learning notes collection."
authors = [{ name = "Yunjie Lin", email = "jshn9510@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    'numpy>=2.4.0,<2.5.0',
    'matplotlib>=3.11.0,<3.12.0',
    'torch>=2.12.0,<2.13.0',
]

[project.optional-dependencies]
test = ['pytest>=9.0.0,<9.1.0']

[project.urls]
Homepage = "https://github.com/jshn9515/deep-learning-notes"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"
